# deskhop

./: .gitignore  .gitmodules  CMakeLists.txt  boot3.s  calc_crc.py  connect_bootloader.py  flash.sh  memory_map_boot3.ld  openocd.cfg  otg_flash_b.py  uart.sh  upload.sh
src/: defaults.c  handlers.c  host_msg.c  keyboard.c  main.c  main.h  mouse.c  screens.c  screens.h  setup.c  tusb_config.h  uart.c  uart_otg.c  usb.c  usb_descriptors.c  usb_descriptors.h  user_config.h  utils.c
